# MAR_project

./: .gitattributes  .gitignore  260612_모델링.md  260612_최적화계획.md  260612_최적화계획1.md  260616_최적화_튜터링.md  MUJOCO_LOG.TXT  README.md  calculate.py  eating_scoop_system_v11.py  environment.yml  motor spec.md  pyproject.toml  requirements.txt  robot_model_v5_scene.xml
meal_assist/: __init__.py  analyze_singularity_space.py  cli.py  config.py  core.py  database.py  datatypes.py  environment.yml  geometry.py  ik.py  mathutils.py  neutral.py  pathgen.py  robot.py  run_meal_assist.py  runner.py  scoop_builder.py  step9_plot_analysis.py  trajectory_taskspace_ik_end_026_000_030.npy  tutorial_drag_opt_common.py  tutorial_drag_opt_step1_cost.py  tutorial_drag_opt_step2_smoothness.py  tutorial_drag_opt_step3_random_search.py  tutorial_drag_opt_step4_add_head_singularity.py  tutorial_drag_opt_step5_slsqp.py  tutorial_drag_opt_step6_drag_lift.py  tutorial_drag_opt_step7_joint.py  tutorial_drag_opt_step8_full.py  tutorial_drag_opt_step9_mouth.py
model/: link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  link7.stl
scoop_lut_output_v11/: mouth_connector.json  mouth_lut_3d.json  neutral.json  scoop_primitives.json  scoop_primitives_summary.csv
tutorial_drag_opt_output/: step3_random_search_result.json  step4_head_singularity_result.json  step5_slsqp_result.json  step6_drag_lift_result.json  step7_joint_result.json  step8_full_result.json  step9_mouth_result.json  step9_segments.json
